--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,160 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main_div{
+  width:100%;
+  height:100vh;
+  background-image: url("./images/bg1.jpg");
+  background-size: cover;
   display: flex;
+}
+.header{
+  width: 100%;
+  height: 100px;
+}
+.header img{
+  margin-top: 20px;
+  width: 250px;
+  opacity:.9;
+}
+.inner_div{
+  overflow: auto;
+  width: 600px;
+  height: 400px;
+  background-color: aliceblue;
+  /* align-self: center; */
+  margin-right: 200px;
+  margin-top: 100px;
+  margin-bottom: 50px;
+
+ backdrop-filter: blur(4px) saturate(134%);
+    -webkit-backdrop-filter: blur(4px) saturate(134%);
+    background-color: rgba(255, 255, 255, 0.51);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+}
+.inner_div h1{
+  text-align: center;
+  margin-top: 10px;
+  color: rgb(10, 10, 10);
+  text-shadow: 2px 2px 2px #ffffff80;
+  font-family: 'Rubik', sans-serif;
+}
+.inner_div input{
+  margin-left: 20px;
+  text-align: center;
+  height: 30px;
+  top: 10px;
+  border: none;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 50px;
+  width: 55%;
+  border-bottom: 2px solid #1976d2;
+  outline: none;
+  
+}
+Button:hover{
+  color:#047931
+}
+.inner_div1{
+  
+  align-self: center;
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+}
+.list li{
+  list-style: none;
+  text-transform: capitalize;
+}
+.list_icon{
+  display: flex;
+}
+.completebtn:hover{
+  color:green;
+}
+
+.clear_all Button:hover{
+  color:red
+}
+.list{
+  margin-left: 40px;
+  
+}
+.list_icon span{
+  margin-right: 2px;
+}
+.clear_all{
+  display: flex;
+  justify-content: end;
+  align-items: flex-end;
+}
+.footer{
+  width: 100%;
+  background-color: #050505;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: .8;
+}
+.footer h4{
+ color : white;
+ font-size: 15px;
+ font-family: sans-serif;
+ font-weight: 200;
+ opacity: .8;
+}
+@media only screen and (max-width: 600px){
+  .header{
+  width: 100%;
+  height: 50px;
+}
+.header img{
+  margin-top: 20px;
+  width: 150px;
+}
+.main_div{
+  flex-direction: column;
+}
+.inner_div{
+  width: 300px;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 220px;
+}
+.inner_div h1{
+  font-size: 20px;
+}
+.inner_div input{
+ 
+  background: transparent;
+  font-size: 12px;
+  margin-left: 65px;
+  border-bottom: 1px solid blue;
+}
+.list{
+  font-size: 18px;
+}
+.footer h4{
+ font-size: 10px;
+ font-weight: 200;
+}
+
+}
+@media only screen and (min-width: 768px){
+.main_div{
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.inner_div{
+  width: 400px;
+  height: 400px;
+  /* margin-top: 200px;  */
+  align-self: flex-end;
+  justify-self: flex-end;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
